[gd_scene load_steps=6 format=3 uid="uid://wpwc8e5vda2q"]

[ext_resource type="PackedScene" uid="uid://cksf5c7ak53y6" path="res://Assets/Mesh/Minigames/Airboat/Airboat2.gltf" id="1_63cef"]
[ext_resource type="Script" path="res://Assets/Scripts/Client/Minigame/AirKart_Controller.gd" id="1_n66c1"]
[ext_resource type="Material" uid="uid://donxhx7k6upmd" path="res://Assets/Materials/Minigames/Airboat_Shader_Material.tres" id="2_ko044"]
[ext_resource type="PackedScene" uid="uid://dp0k1g087afbc" path="res://Assets/Scenes/Client/Ui/Interact_Prompt.tscn" id="4_ca3bs"]

[sub_resource type="SphereShape3D" id="SphereShape3D_u7fa5"]
radius = 0.332584

[node name="AirKart" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_n66c1")

[node name="Hub" parent="." instance=ExtResource("1_63cef")]

[node name="Airboat" parent="Hub" index="0"]
surface_material_override/0 = ExtResource("2_ko044")

[node name="RemotePos" type="RemoteTransform3D" parent="Hub"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.372173, 0.125123)
update_rotation = false
update_scale = false

[node name="RemoteRot" type="RemoteTransform3D" parent="Hub"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.372173, 0.125123)
update_position = false
update_scale = false

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283924, 0)
shape = SubResource("SphereShape3D_u7fa5")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0108345, 0)

[node name="Interact_Prompt" parent="." instance=ExtResource("4_ca3bs")]

[node name="MoveMarker" type="Marker3D" parent="."]

[editable path="Hub"]
